<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/moneyAmountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/money_amt"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cardCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/payment_card"
        app:layout_constraintEnd_toEndOf="@+id/moneyAmountInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/moneyAmountInput"
        app:layout_constraintTop_toBottomOf="@+id/moneyAmountInput" />

    <CheckBox
        android:id="@+id/phoneCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_phone"
        app:layout_constraintEnd_toEndOf="@+id/cardCheckBox"
        app:layout_constraintStart_toStartOf="@+id/cardCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/cardCheckBox" />

    <CheckBox
        android:id="@+id/cashCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_cash"
        app:layout_constraintEnd_toEndOf="@+id/phoneCheckBox"
        app:layout_constraintStart_toStartOf="@+id/phoneCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/phoneCheckBox" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/proceed"
        app:layout_constraintEnd_toEndOf="@+id/additionalInput"
        app:layout_constraintStart_toStartOf="@+id/additionalInput"
        app:layout_constraintTop_toBottomOf="@+id/additionalInput" />

    <EditText
        android:id="@+id/additionalInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/additional_info"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/cashCheckBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cashCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/cashCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>